# rust_perceptron

./: .gitignore  Cargo.toml  README.md
src/: data.rs  main.rs  pipelines.rs  tensor.rs
src/autograd/: graph.rs  mod.rs  output.rs  tensor.rs
src/autograd/cost_functions/: crossentropy.rs  mod.rs
src/autograd/matrix_operations/: matrixadd.rs  mod.rs
src/data/: mnist.rs  mod.rs
src/device/: mod.rs  tensor.rs
src/dispatch/: mod.rs
src/dispatch/matrix_operations/: mod.rs
src/gpu/: mod.rs
src/gpu/cost_functions/: mod.rs
src/gpu/matrix_operations/: mod.rs
src/kernel/cpu/: mod.rs
src/kernel/gpu/: mod.rs
src/network/: batchnorm.rs  denselayer.rs  mod.rs  perceptron.rs
src/network/cost/: crossentropy.rs  mod.rs  squarederror.rs
src/network/layers/: batchnorm.rs  denselayer.rs  fullyconnected.rs  mod.rs  relu.rs  softmax.rs
src/optimisers/: mod.rs
src/pipelines/: applyweights.rs  backprop.rs  descendgrad.rs  differror.rs  error.rs  leakyrelu.rs  leakyreluprime.rs  loss.rs  matrixdot.rs  mod.rs  subtract.rs
src/pipelines/addvectortobatch/: mod.rs  shader.comp
src/pipelines/batchmax/: mod.rs  shader.comp
src/pipelines/batchmean/: mod.rs  shader.comp
src/pipelines/batchnorm/: mod.rs  shader.comp
src/pipelines/batchnormprime/: mod.rs  shader.comp
src/pipelines/batchtotal/: mod.rs  shader.comp
src/pipelines/batchvar/: mod.rs  shader.comp
src/pipelines/copymatrix/: mod.rs  shader.comp
src/pipelines/crossentropy/: mod.rs  shader.comp
src/pipelines/crossentropyprime/: mod.rs  shader.comp
src/pipelines/expfunct/: mod.rs  (+1 more)
src/shaders/: backward.comp  difference.comp  forward.comp
src/tensor/: mod.rs
(+73 files in other folders)
