[package]
name = "rust_perceptron"
version = "0.6.8"
authors = ["gregoryquick <gregory@quicks.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"
rand = "0.8"
itertools = "0.10"
byteorder = "1.4"
tokio = {version = "1", features = ["full"]}
wgpu = "0.11"
bytes = "1"
enum_extract = "0.1"
bytemuck = {version = "1.7", features = ["derive"]}
crevice = "0.8"
async-trait = "0.1"

